# bw-automaton

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.markdown  a.out  bwt.cpp  bwt.h  compile.sh  config.h.in  config.status  configure  configure.ac  index.html  main.cpp  main.h  main.txt  params.json
sample/: code.js  code2.js  index.html  index2.html  sample.dot
